# V1_simulation

./: .gitignore  pyproject.toml
configs/: config.yaml  schema.py
configs/analysis/: default.yaml
configs/background/: none.yaml  ou.yaml
configs/experiment/: bcm_train.yaml  bcm_train_g525_recommended.yaml  recommended.yaml  smoke.yaml
data/: sample_data.pkl
pytest_temp/: test_run_bcm_training_uses_schcurrent  test_training_artifacts_save_scurrent
scratch/: debug_early_stop.py  diagnose_steady.py  test_load.py  verify_early_stop.py
scripts/: calibrate_natural_image_drive.py  check_steady_state.py  compare_initial_final_analysis.py  compare_solvers.py  diagnose_bcm_training.py  make_clipped_checkpoint.py  plot_fixed_patch_wilson_cowan_dynamics.py  plot_oscillations.py  plot_training_firing_rates.py  profile_training_batch.py  sweep_fixed_patch_stability.py  verify_diffrax_reliability.py
tests/: test_analysis_artifacts.py  test_analysis_clusters.py  test_analysis_metrics.py  test_analysis_osi.py  test_analysis_pipeline.py  test_analysis_plotting.py  test_analysis_spatial.py  test_background.py  test_bcm_diagnostics.py  test_bcm_plasticity.py  test_cli.py  test_clipped_checkpoint.py  test_early_stop.py  test_experimental.py  test_geometry.py  test_grating.py  test_natural_images.py  test_natural_inputs.py  test_natural_stimulation.py  test_network_core.py  test_receptive_fields.py  test_siegert_transfer.py  test_simulation_pipeline.py  test_solver_optimization.py  test_solvers.py  test_sweeps.py  test_trainer.py  test_training_pipeline.py
(+96 files in other folders)
