[project]
name = "v1-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "skywalker", email = "152383937+freesky3@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "bctpy>=0.6.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "omegaconf>=2.3.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]

[project.scripts]
v1-simulation = "v1_simulation:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--basetemp=.pytest"

[project.optional-dependencies]
jax = [
    "jax",
    "diffrax",
]
jax-cuda12 = [
    "jax[cuda12]",
    "diffrax",
]
